--- a/learning/templates/mysite/base.html
+++ b/learning/templates/mysite/base.html
@@ -25,9 +25,6 @@
 </head>
 
 <body>
-
-
-    <!-- Sidenav -->
     <nav id="notesidenav" class="sidenav d-lg-block" data-hidden="false" data-mdb-color="light" data-mdb-mode="side" data-mdb-slim-collapsed="true" data-mdb-content="#content"
         style="background-color: #2d2c2c; width: 240px; height: 100vh; position: fixed; transition: all 0.3s linear 0s; transform: translateX(0%);">
 
@@ -50,16 +47,6 @@
                 {% endif %}
             </div>
         </div>
-        <div class="input-group rounded">
-            <form action="{% url 'learning:search' %}" class="form-inline" method="POST">
-                {% csrf_token %}
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" ,name="freeword">
-            </form>
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="fas fa-search"></i>
-            </span>
-        </div>
-        <br>
         <ul class="sidenav-menu">
             <li class="sidenav-item">
                 <a class="sidenav-link" href="{% url 'learning:index' %}">
@@ -85,26 +72,20 @@
             </li>
         </ul>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1">
+            </div>
 
+        <!-- Sidenav -->
+        <!--Main Navigation-->
+        {% block content %}
 
-    <!-- Sidenav -->
-    {% comment %} {% if messages %} {% endcomment %}
-    {% comment %} <br> {% endcomment %}
-    {% comment %} {% for message in messages %} {% endcomment %}
-
-    {% comment %} <div class="alert alert-{{ message.tags }}" role="alert"> {% endcomment %}
-        {% comment %} {{ message }} {% endcomment %}
-    {% comment %} </div> {% endcomment %}
-
-    {% comment %} {% endfor %} {% endcomment %}
-    {% comment %} {% endif %} {% endcomment %}
-    <!--Main Navigation-->
-    {% block content %}
-    {% endblock %}
+        {% endblock %}
+        <!-- MDB -->
+        </div>
+    </div>      
     <!-- MDB -->
-        
-    <!-- MDB -->
-    {% load static %}
     
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -117,7 +98,6 @@
 
 
     <script>
-        {% comment %} var quill = new Quill('#editor', { theme: 'snow' }); {% endcomment %}
 
         /* 拡張テキストエディタ「Quill」に関する処理 */
 
