ボタン修正

--- a/learning/templates/mysite/signup.html
+++ b/learning/templates/mysite/signup.html
@@ -17,7 +17,7 @@
                 {{ field.errors}}
                 <br>
                 {% endfor %}
-                <button type="submit" class="btn btn-primary">Signup</button>
+                <button type="submit" class="btn btn-success">Signup</button>
                 <br><br>
 
             </form>
